skims\feat(back): #3448.2 parsing backend
Closes #3448


Former-commit-id: da6a123b12bdfa62ec43162d1e7a5b9262bf107e

--- a/skims/.gitignore
+++ b/skims/.gitignore
@@ -21,6 +21,7 @@
 /static/parsers/antlr/gradlew
 /static/parsers/antlr/src/main/java/parse/CSharp*
 /static/parsers/antlr/src/main/java/parse/Java9*
+/static/parsers/antlr/src/main/java/parse/Scala*
 /static/parsers/babel/node_modules/
 /static/parsers/babel/package-lock.json
 /test/**/*.yaml.json
