sorts\feat(build): #3441.2 nixify and lint code
- Add basic Nix provisioners to run CI jobs.
- Add job to lint the code.


Former-commit-id: 03aa74c5a38b5675d11f6d0db7e4b955b5055cfc

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ include:
   - local: reviews/.gitlab-ci.yml
   - local: serves/.gitlab-ci.yml
   - local: skims/.gitlab-ci.yml
+  - local: sorts/.gitlab-ci.yml
 
 stages:
   - rotation
