--- a/integrates/deploy/production/ingress.yaml
+++ b/integrates/deploy/production/ingress.yaml
@@ -23,6 +23,10 @@ spec:
             backend:
               serviceName: ssl-redirect
               servicePort: use-annotation
+          - path: /new/*
+            backend:
+              serviceName: integrates2-__DEPLOYMENT_NAME__
+              servicePort: 80
           - path: /*
             backend:
               serviceName: integrates-master
