--- a/sorts/pyproject.toml
+++ b/sorts/pyproject.toml
@@ -15,13 +15,20 @@ classifiers = [
   "Topic :: Security",
 ]
 description = "Tool that prioritizes files of a git repository according to the likelihood of them having a vulnerability"
+include = [
+  "static/*",
+]
 license = "MPL-2.0"
 name = "sorts"
+packages = [
+  { include = "cli", from = "sorts" },
+]
 readme = "./README.md"
 repository = "https://gitlab.com/fluidattacks/product/-/tree/master/sorts"
 version = "1.0.0"
 
 [tool.poetry.dependencies]
+click = "7.1.2"
 GitPython = "3.1.9"
 joblib = "0.16.0"
 mypy_extensions = "0.4.3"
@@ -38,3 +45,6 @@ prospector = "1.3.0"
 pydeps = "1.9.4"
 pytest = "5.4.3"
 pytest-cov = "2.10.0"
+
+[tool.poetry.scripts]
+sorts = 'cli:dispatch'
