sorts\feat(back): #3441.4 add basic empty modules
- Add the structure for the basic modules that the tool will have.


Former-commit-id: 900cab5b61ce91054fa5401fcfc5e681f5a1bd1c

--- a/sorts/pyproject.toml
+++ b/sorts/pyproject.toml
@@ -22,6 +22,10 @@ license = "MPL-2.0"
 name = "sorts"
 packages = [
   { include = "cli", from = "sorts" },
+  { include = "integrates", from = "sorts" },
+  { include = "predict", from = "sorts" },
+  { include = "training", from = "sorts" },
+  { include = "utils", from = "sorts" },
 ]
 readme = "./README.md"
 repository = "https://gitlab.com/fluidattacks/product/-/tree/master/sorts"
