observes\feat(build): #3323.5 test code job
- added log
- added test code job
- updated test files paths


Former-commit-id: d191a9af56947994abd81a48fe38cd46c27f9169

--- a/observes/.gitlab-ci.yml
+++ b/observes/.gitlab-ci.yml
@@ -41,6 +41,11 @@ observes_lint_code:
   <<: *observes_in_dev_branch
   stage: lint-code
 
+observes_test_code:
+  <<: *with_nix
+  <<: *observes_in_dev_branch
+  stage: test-code
+
 observes_test_infra:
   <<: *with_nix
   <<: *observes_in_dev_branch
