--- a/integrates/deploy/production/service2.yaml
+++ b/integrates/deploy/production/service2.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: integrates2-__DEPLOYMENT_NAME__
-  namespace: ephemeral
+  name: integrates2-master
+  namespace: production
 spec:
   type: NodePort
   ports:
@@ -10,4 +10,4 @@ spec:
       targetPort: 8080
       protocol: TCP
   selector:
-    app: integrates2-__DEPLOYMENT_NAME__
+    app: integrates2-master
