sorts\feat(back): #3441.5 define graphql client
- Add GraphQl client to communicate with Integrates.
- Add logs module and decorators.
- Next MR will cover the install process.


Former-commit-id: d98e66a1e2ea4d8d56bc6a8b501190ae302d58b8

--- a/sorts/pyproject.toml
+++ b/sorts/pyproject.toml
@@ -32,9 +32,13 @@ repository = "https://gitlab.com/fluidattacks/product/-/tree/master/sorts"
 version = "1.0.0"
 
 [tool.poetry.dependencies]
+aioextensions = "20.9.2315218"
+aiogqlc = "2.0.0b1"
+aiohttp = "3.6.2"
 click = "7.1.2"
 GitPython = "3.1.9"
 joblib = "0.16.0"
+more_itertools = "8.5.0"
 mypy_extensions = "0.4.3"
 numpy = "1.19.2"
 pandas = "1.1.2"
