serves\fix(build): #3455.2 integrates2 prod
- Rename integrates2-master
- Decrease integrates2-replicas
- Add right grep to integrates2 probes


Former-commit-id: 64a7f1d89bcc57f8098fef48144ce3290f89097a

--- a/integrates/deploy/production/deployment2.yaml
+++ b/integrates/deploy/production/deployment2.yaml
@@ -1,15 +1,15 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: integrates-master
+  name: integrates2-master
   namespace: production
   annotations:
     kubernetes.io/change-cause: "New deployment version of async Integrates on __DATE__"
 spec:
-  replicas: 10
+  replicas: 1
   selector:
     matchLabels:
-      app: integrates-master
+      app: integrates2-master
   strategy:
     rollingUpdate:
       maxSurge: 2
@@ -17,7 +17,7 @@ spec:
   template:
     metadata:
       labels:
-        app: integrates-master
+        app: integrates2-master
     spec:
       nodeSelector:
         worker_group: xlarge
