--- a/observes/singer/streamer_gitlab/pyproject.toml
+++ b/observes/singer/streamer_gitlab/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "tap_gitlab"
+name = "streamer_gitlab"
 version = "0.1.0"
 description = ""
 authors = ["Product Team <development@fluidattacks.com>"]
