--- a/serves/.gitlab-ci.yml
+++ b/serves/.gitlab-ci.yml
@@ -93,12 +93,7 @@ serves_test_user_provision_integrates:
   <<: *serves_in_dev_branch
   stage: test-infra
 
-serves_test_user_provision_skims_dev:
-  <<: *with_nix
-  <<: *serves_in_dev_branch
-  stage: test-infra
-
-serves_test_user_provision_skims_prod:
+serves_test_user_provision_skims:
   <<: *with_nix
   <<: *serves_in_dev_branch
   stage: test-infra
@@ -177,12 +172,7 @@ serves_apply_user_provision_integrates:
   <<: *serves_in_master_branch
   stage: deploy-infra
 
-serves_apply_user_provision_skims_dev:
-  <<: *with_nix
-  <<: *serves_in_master_branch
-  stage: deploy-infra
-
-serves_apply_user_provision_skims_prod:
+serves_apply_user_provision_skims:
   <<: *with_nix
   <<: *serves_in_master_branch
   stage: deploy-infra
@@ -238,6 +228,11 @@ serves_rotate_keys_user_provision_melts:
   stage: rotation
 
 serves_rotate_keys_user_provision_observes:
+  <<: *with_nix
+  <<: *serves_in_schedule_rotate_keys_user_provision
+  stage: rotation
+
+serves_rotate_keys_user_provision_skims:
   <<: *with_nix
   <<: *serves_in_schedule_rotate_keys_user_provision
   stage: rotation
