sorts\feat(build): #3441.6 deploy to pypi and install
- Add job that deploys the tool to PyPi
- Add code to install the tool locally using Nix `./install.sh`


Former-commit-id: 68beb455bdd4154d4df962a590222b6153fb9de3

--- a/sorts/.gitlab-ci.yml
+++ b/sorts/.gitlab-ci.yml
@@ -46,3 +46,8 @@ sorts_lint:
   <<: *with_nix
   <<: *sorts_in_dev_branch
   stage: lint-code
+
+sorts_deploy_to_pypi:
+  <<: *with_nix
+  <<: *sorts_in_master_branch
+  stage: deploy-app
