--- a/observes/singer/streamer_gitlab/pyproject.toml
+++ b/observes/singer/streamer_gitlab/pyproject.toml
@@ -5,14 +5,14 @@ description = ""
 authors = ["Product Team <development@fluidattacks.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.7"
 aiohttp = "3.6.2"
 aioextensions = "20.8.2087641"
 asgiref = "3.2.10"
 
-[tool.poetry.dev-dependencies]
-pytest = "^5.2"
-
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.poetry.scripts]
+streamer-gitlab = 'streamer_gitlab.cli:parse_args'
