skims\feat(back): #3375.6 improve precision
- cfn_admin_policy_attached


Former-commit-id: 6c32d0ed30051b90fd3e7076a0b13534493520b1

--- a/skims/test/data/lib_path/f031_aws/cfn_admin_policy_attached.yaml
+++ b/skims/test/data/lib_path/f031_aws/cfn_admin_policy_attached.yaml
@@ -4,5 +4,7 @@ Resources:
     Properties:
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/AdministratorAccess
+        - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
         - arn:aws:iam::aws:policy/IAMFullAccess
+        - arn:aws:iam::aws:policy/SecretsManagerReadWrite
         - arn:aws:iam::aws:policy/PowerUserAccess
