--- a/integrates/deploy/ephemeral/deployment2.yaml
+++ b/integrates/deploy/ephemeral/deployment2.yaml
@@ -21,11 +21,11 @@ spec:
           imagePullPolicy: Always
           resources:
             requests:
-              cpu: 250m
-              memory: 512Mi
+              cpu: 500m
+              memory: 1Gi
             limits:
-              cpu: 250m
-              memory: 512Mi
+              cpu: 500m
+              memory: 1Gi
           env:
             - name: DEPLOYMENT_DATE
               value: "__DATE__"
