observes\feat(build): #3478.2 lint and test
- added lint for code package
- added test for code package
- minor docs change on aws_batch


Former-commit-id: 1f56389e1caefea3667d3b5f1e9be883b51cdd17

--- a/observes/.gitlab-ci.yml
+++ b/observes/.gitlab-ci.yml
@@ -108,6 +108,16 @@ observes_gitlab_test:
   <<: *observes_in_dev_branch
   stage: test-code
 
+observes_code_lint:
+  <<: *with_nix
+  <<: *observes_in_dev_branch
+  stage: lint-code
+
+observes_code_test:
+  <<: *with_nix
+  <<: *observes_in_dev_branch
+  stage: test-code
+
 observes_timedoctor:
   <<: *with_nix
   tags: [autoscaling-analytics]
