--- a/observes/code/pyproject.toml
+++ b/observes/code/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "observes_code"
+name = "code"
 version = "0.1.0"
 description = ""
 authors = ["Product Team <development@fluidattacks.com>"]
