skims\fix(back): #3484.1 exclude localhost
Closes #3484


Former-commit-id: 802a1c29182bba91628b70456b8f911664e55a69

--- a/skims/test/data/lib_path/f022/java.properties
+++ b/skims/test/data/lib_path/f022/java.properties
@@ -11,3 +11,8 @@ bg.ws.endpoint = #{http://www.test.com}#
 bg.ws.endpoint = ${http://www.test.com}
 bg.ws.endpoint = ENC(http://www.test.com)
 # bg.ws.endpoint =  http://www.test.com
+
+# These ones are safe, localhost, loopback and host
+bg.ws.endpoint = http://localhost
+bg.ws.endpoint = ftp://127.0.0.1
+bg.ws.endpoint = http://0.0.0.0
