--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -23,6 +23,7 @@ license = "MPL-2.0"
 name = "skims"
 packages = [
   { include = "aws", from = "skims" },
+  { include = "benchmark", from = "skims" },
   { include = "cli", from = "skims" },
   { include = "config", from = "skims" },
   { include = "core", from = "skims" },
