skims\feat(cross): #3487.4 output results as csv
- Add an option in the CLI to dump results to a file
  so they can be parsed later
- no-deltas-test


Former-commit-id: 5d1763c270688283ae94c41c85c70aa0fdb78f0a

--- a/skims/test/data/config/owasp_benchmark.yaml
+++ b/skims/test/data/config/owasp_benchmark.yaml
@@ -1,6 +1,6 @@
 chdir: ../../owasp_benchmark/src/main/java/org/owasp/benchmark/testcode
-console_snippets: false
 language: EN
+output: results.csv
 path:
   include:
     - glob(*)
