observes\refac(back): #3478.5 items to change
- get_items_to_change migrated
- log migrated


Former-commit-id: 88d840ace12f91488630425696b002a6bfec4707

--- a/observes/code/pyproject.toml
+++ b/observes/code/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Product Team <development@fluidattacks.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+aioextensions = "20.9.2315218"
 
 [tool.poetry.dev-dependencies]
 
