sorts\test(back): #3441.11 configure tests and test gql
- Setup structure for tests (fixtures, CI job).
- Test GraphQL client.


Former-commit-id: 8d968a4057fd7edcb1850ce67ce38fec47dc876c

--- a/sorts/.gitlab-ci.yml
+++ b/sorts/.gitlab-ci.yml
@@ -47,6 +47,11 @@ sorts_lint:
   <<: *sorts_in_dev_branch
   stage: lint-code
 
+sorts_test:
+  <<: *with_nix
+  <<: *sorts_in_dev_branch
+  stage: test-code
+
 sorts_deploy_to_pypi:
   <<: *with_nix
   <<: *sorts_in_master_branch
