--- a/sorts/pyproject.toml
+++ b/sorts/pyproject.toml
@@ -48,9 +48,9 @@ scikit-learn = "0.23.2"
 [tool.poetry.dev-dependencies]
 mypy = "0.782"
 prospector = "1.3.0"
-pydeps = "1.9.4"
-pytest = "5.4.3"
-pytest-cov = "2.10.0"
+pytest = "6.1.1"
+pytest-cov = "2.10.1"
+pytest-rerunfailures = "9.1.1"
 
 [tool.poetry.scripts]
 sorts = 'cli:execute_sorts'
