skims\feat(back): #3502.1 caches and 1 fp
- Adjust caches to be centralized constants
- Avoid reporting 1 false positive in the benchmark
- Added regression tests


Former-commit-id: 5f72b1b50f45855d3909b01681802fab9b9c126a

--- a/skims/test/data/config/owasp_benchmark.yaml
+++ b/skims/test/data/config/owasp_benchmark.yaml
@@ -3,5 +3,15 @@ language: EN
 output: results.csv
 path:
   include:
-    - glob(*)
+    # Crypto category
+    - BenchmarkTest00005.java
+    - BenchmarkTest00019.java
+    - BenchmarkTest00020.java
+    - BenchmarkTest00035.java
+    - BenchmarkTest00050.java # 5
+    - BenchmarkTest00053.java
+    - BenchmarkTest00054.java
+    - BenchmarkTest00055.java
+    - BenchmarkTest00056.java
+    - BenchmarkTest00057.java # 10
   exclude: []
