skims\refac(conf): #3502.2 full crypto category
- We can process the full crypto category of OWASP
- Our OWASP Score is now 10% (market is 30%)
- no-deltas-test


Former-commit-id: 7651c284c09d0535bdec0cb1af8ab5d8e02b45b8

--- a/skims/test/data/config/owasp_benchmark.yaml
+++ b/skims/test/data/config/owasp_benchmark.yaml
@@ -14,4 +14,240 @@ path:
     - BenchmarkTest00055.java
     - BenchmarkTest00056.java
     - BenchmarkTest00057.java # 10
+    - BenchmarkTest00058.java
+    - BenchmarkTest00059.java
+    - BenchmarkTest00119.java
+    - BenchmarkTest00120.java
+    - BenchmarkTest00121.java # 15
+    - BenchmarkTest00122.java
+    - BenchmarkTest00123.java
+    - BenchmarkTest00124.java
+    - BenchmarkTest00125.java
+    - BenchmarkTest00126.java # 20
+    - BenchmarkTest00127.java
+    - BenchmarkTest00128.java
+    - BenchmarkTest00129.java
+    - BenchmarkTest00130.java
+    - BenchmarkTest00208.java # 25
+    - BenchmarkTest00209.java
+    - BenchmarkTest00210.java
+    - BenchmarkTest00211.java
+    - BenchmarkTest00212.java
+    - BenchmarkTest00213.java # 30
+    - BenchmarkTest00214.java
+    - BenchmarkTest00254.java
+    - BenchmarkTest00255.java
+    - BenchmarkTest00256.java
+    - BenchmarkTest00257.java # 35
+    - BenchmarkTest00258.java
+    - BenchmarkTest00259.java
+    - BenchmarkTest00260.java
+    - BenchmarkTest00345.java
+    - BenchmarkTest00350.java # 40
+    - BenchmarkTest00351.java
+    - BenchmarkTest00352.java
+    - BenchmarkTest00353.java
+    - BenchmarkTest00354.java
+    - BenchmarkTest00355.java # 45
+    - BenchmarkTest00356.java
+    - BenchmarkTest00357.java
+    - BenchmarkTest00358.java
+    - BenchmarkTest00443.java
+    - BenchmarkTest00444.java # 50
+    - BenchmarkTest00445.java
+    - BenchmarkTest00446.java
+    - BenchmarkTest00447.java
+    - BenchmarkTest00448.java
+    - BenchmarkTest00449.java # 55
+    - BenchmarkTest00450.java
+    - BenchmarkTest00451.java
+    - BenchmarkTest00521.java
+    - BenchmarkTest00522.java
+    - BenchmarkTest00523.java # 60
+    - BenchmarkTest00524.java
+    - BenchmarkTest00608.java
+    - BenchmarkTest00609.java
+    - BenchmarkTest00610.java
+    - BenchmarkTest00611.java # 65
+    - BenchmarkTest00612.java
+    - BenchmarkTest00613.java
+    - BenchmarkTest00614.java
+    - BenchmarkTest00615.java
+    - BenchmarkTest00616.java # 70
+    - BenchmarkTest00617.java
+    - BenchmarkTest00618.java
+    - BenchmarkTest00684.java
+    - BenchmarkTest00685.java
+    - BenchmarkTest00686.java # 75
+    - BenchmarkTest00687.java
+    - BenchmarkTest00688.java
+    - BenchmarkTest00689.java
+    - BenchmarkTest00690.java
+    - BenchmarkTest00691.java # 80
+    - BenchmarkTest00692.java
+    - BenchmarkTest00693.java
+    - BenchmarkTest00775.java
+    - BenchmarkTest00776.java
+    - BenchmarkTest00777.java # 85
+    - BenchmarkTest00778.java
+    - BenchmarkTest00779.java
+    - BenchmarkTest00780.java
+    - BenchmarkTest00781.java
+    - BenchmarkTest00782.java # 90
+    - BenchmarkTest00853.java
+    - BenchmarkTest00854.java
+    - BenchmarkTest00855.java
+    - BenchmarkTest00856.java
+    - BenchmarkTest00857.java # 95
+    - BenchmarkTest00858.java
+    - BenchmarkTest00859.java
+    - BenchmarkTest00942.java
+    - BenchmarkTest00943.java
+    - BenchmarkTest00944.java # 100
+    - BenchmarkTest00945.java
+    - BenchmarkTest00946.java
+    - BenchmarkTest01015.java
+    - BenchmarkTest01016.java
+    - BenchmarkTest01017.java # 105
+    - BenchmarkTest01018.java
+    - BenchmarkTest01019.java
+    - BenchmarkTest01020.java
+    - BenchmarkTest01021.java
+    - BenchmarkTest01022.java # 110
+    - BenchmarkTest01099.java
+    - BenchmarkTest01100.java
+    - BenchmarkTest01101.java
+    - BenchmarkTest01102.java
+    - BenchmarkTest01103.java # 115
+    - BenchmarkTest01104.java
+    - BenchmarkTest01105.java
+    - BenchmarkTest01106.java
+    - BenchmarkTest01107.java
+    - BenchmarkTest01108.java # 120
+    - BenchmarkTest01147.java
+    - BenchmarkTest01148.java
+    - BenchmarkTest01149.java
+    - BenchmarkTest01150.java
+    - BenchmarkTest01151.java # 125
+    - BenchmarkTest01152.java
+    - BenchmarkTest01153.java
+    - BenchmarkTest01226.java
+    - BenchmarkTest01227.java
+    - BenchmarkTest01228.java # 130
+    - BenchmarkTest01229.java
+    - BenchmarkTest01230.java
+    - BenchmarkTest01317.java
+    - BenchmarkTest01318.java
+    - BenchmarkTest01319.java # 135
+    - BenchmarkTest01320.java
+    - BenchmarkTest01321.java
+    - BenchmarkTest01322.java
+    - BenchmarkTest01323.java
+    - BenchmarkTest01324.java # 140
+    - BenchmarkTest01325.java
+    - BenchmarkTest01398.java
+    - BenchmarkTest01399.java
+    - BenchmarkTest01400.java
+    - BenchmarkTest01401.java # 145
+    - BenchmarkTest01480.java
+    - BenchmarkTest01481.java
+    - BenchmarkTest01482.java
+    - BenchmarkTest01483.java
+    - BenchmarkTest01484.java # 150
+    - BenchmarkTest01485.java
+    - BenchmarkTest01486.java
+    - BenchmarkTest01487.java
+    - BenchmarkTest01488.java
+    - BenchmarkTest01489.java # 155
+    - BenchmarkTest01563.java
+    - BenchmarkTest01564.java
+    - BenchmarkTest01565.java
+    - BenchmarkTest01566.java
+    - BenchmarkTest01567.java # 160
+    - BenchmarkTest01634.java
+    - BenchmarkTest01635.java
+    - BenchmarkTest01636.java
+    - BenchmarkTest01637.java
+    - BenchmarkTest01638.java # 165
+    - BenchmarkTest01639.java
+    - BenchmarkTest01640.java
+    - BenchmarkTest01641.java
+    - BenchmarkTest01737.java
+    - BenchmarkTest01738.java # 170
+    - BenchmarkTest01739.java
+    - BenchmarkTest01740.java
+    - BenchmarkTest01741.java
+    - BenchmarkTest01742.java
+    - BenchmarkTest01822.java # 175
+    - BenchmarkTest01823.java
+    - BenchmarkTest01824.java
+    - BenchmarkTest01825.java
+    - BenchmarkTest01826.java
+    - BenchmarkTest01827.java # 180
+    - BenchmarkTest01828.java
+    - BenchmarkTest01829.java
+    - BenchmarkTest01830.java
+    - BenchmarkTest01895.java
+    - BenchmarkTest01896.java # 185
+    - BenchmarkTest01897.java
+    - BenchmarkTest01898.java
+    - BenchmarkTest01899.java
+    - BenchmarkTest01900.java
+    - BenchmarkTest01901.java # 190
+    - BenchmarkTest01975.java
+    - BenchmarkTest01976.java
+    - BenchmarkTest01977.java
+    - BenchmarkTest01978.java
+    - BenchmarkTest01979.java # 195
+    - BenchmarkTest01980.java
+    - BenchmarkTest01981.java
+    - BenchmarkTest01982.java
+    - BenchmarkTest02017.java
+    - BenchmarkTest02018.java # 200
+    - BenchmarkTest02019.java
+    - BenchmarkTest02020.java
+    - BenchmarkTest02021.java
+    - BenchmarkTest02022.java
+    - BenchmarkTest02023.java # 205
+    - BenchmarkTest02024.java
+    - BenchmarkTest02101.java
+    - BenchmarkTest02102.java
+    - BenchmarkTest02103.java
+    - BenchmarkTest02190.java # 210
+    - BenchmarkTest02191.java
+    - BenchmarkTest02192.java
+    - BenchmarkTest02193.java
+    - BenchmarkTest02194.java
+    - BenchmarkTest02195.java # 215
+    - BenchmarkTest02289.java
+    - BenchmarkTest02290.java
+    - BenchmarkTest02291.java
+    - BenchmarkTest02292.java
+    - BenchmarkTest02293.java # 220
+    - BenchmarkTest02294.java
+    - BenchmarkTest02295.java
+    - BenchmarkTest02296.java
+    - BenchmarkTest02297.java
+    - BenchmarkTest02298.java # 225
+    - BenchmarkTest02371.java
+    - BenchmarkTest02372.java
+    - BenchmarkTest02373.java
+    - BenchmarkTest02374.java
+    - BenchmarkTest02375.java # 230
+    - BenchmarkTest02458.java
+    - BenchmarkTest02459.java
+    - BenchmarkTest02460.java
+    - BenchmarkTest02461.java
+    - BenchmarkTest02547.java # 235
+    - BenchmarkTest02548.java
+    - BenchmarkTest02549.java
+    - BenchmarkTest02550.java
+    - BenchmarkTest02551.java
+    - BenchmarkTest02552.java # 240
+    - BenchmarkTest02658.java
+    - BenchmarkTest02659.java
+    - BenchmarkTest02660.java
+    - BenchmarkTest02661.java
+    - BenchmarkTest02662.java # 245
+    - BenchmarkTest02663.java
   exclude: []
