sorts\feat(back): #3441.13 extract number of commits
- Add code to extract the number of commits for each file


Former-commit-id: 0f444033459365f7e520a8b9a609581975369399

--- a/sorts/pyproject.toml
+++ b/sorts/pyproject.toml
@@ -22,6 +22,7 @@ license = "MPL-2.0"
 name = "sorts"
 packages = [
   { include = "cli", from = "sorts" },
+  { include = "features", from = "sorts" },
   { include = "integrates", from = "sorts" },
   { include = "predict", from = "sorts" },
   { include = "training", from = "sorts" },
