--- a/serves/services/autoscaling-ci/config.toml
+++ b/serves/services/autoscaling-ci/config.toml
@@ -57,8 +57,8 @@ check_interval = 20
       "amazonec2-root-size=65"
     ]
     OffPeakPeriods = [
-      "* * 0-6,21-23 * * mon-fri *",
-      "* * * * * sat,sun *"
+      "* * 0-6,21-23 * * mon-sat *",
+      "* * * * * sun *"
     ]
     OffPeakTimezone = "America/Bogota"
     OffPeakIdleCount = 0
@@ -118,8 +118,8 @@ check_interval = 20
       "amazonec2-root-size=60"
     ]
     OffPeakPeriods = [
-      "* * 0-6,21-23 * * mon-fri *",
-      "* * * * * sat,sun *"
+      "* * 0-6,21-23 * * mon-sat *",
+      "* * * * * sun *"
     ]
     OffPeakTimezone = "America/Bogota"
     OffPeakIdleCount = 0
@@ -231,8 +231,8 @@ check_interval = 20
       "amazonec2-root-size=60"
     ]
     OffPeakPeriods = [
-      "* * 0-6,20-23 * * mon-fri *",
-      "* * * * * sat,sun *"
+      "* * 0-6,20-23 * * mon-sat *",
+      "* * * * * sun *"
     ]
     OffPeakTimezone = "America/Bogota"
     OffPeakIdleCount = 0
