--- a/integrates/deploy/containers/app/requirements.txt
+++ b/integrates/deploy/containers/app/requirements.txt
@@ -1,64 +1,125 @@
+Automat==20.2.0
+Django==3.0.7
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+Pillow==7.2.0
+PyExcelerate==0.9.0
+PyHamcrest==2.0.2
+PyJWT==1.7.1
+PyPDF4==1.27.0
+PyYAML==5.3.1
+Twisted==20.3.0
+WebOb==1.8.6
 aioboto3==8.0.3
+aiobotocore==1.0.4
 aiodataloader==0.2.0
 aioextensions==20.8.2087641
 aiofiles==0.5.0
+aiogqlc==1.0.5
+aiohttp==3.6.2
+aioitertools==0.7.0
 aredis==1.1.8
 ariadne==0.12.0
-async_lru==1.0.2
+asgiref==3.3.0
+async-lru==1.0.2
+async-timeout==3.0.1
+attrs==20.2.0
+autobahn==20.7.1
 awscli==1.18.76
 backports.csv==1.0.7
+boto3-type-annotations==0.3.1
 boto3==1.13.26
-boto3_type_annotations==0.3.1
 botocore==1.16.26
 bugsnag==3.6.1
+cachetools==4.1.1
+certifi==2020.6.20
+cffi==1.14.3
 channels==2.4.0
-cloudmersive_virus_api_client==2.0.6
+chardet==3.0.4
+click==7.1.2
+cloudmersive-virus-api-client==2.0.6
+colorama==0.4.3
+constantly==15.1.0
 cryptography==2.9.2
-jwcrypto==0.8
-django==3.0.7
+cycler==0.10.0
+daphne==2.5.0
+defusedxml==0.7.0rc1
 django-analytical==2.6.0
 django-crontab==0.7.1
 django-debreach==2.0.1
-django-redis==4.12.1
 django-redis-sessions==0.6.1
+django-redis==4.12.1
 django-storages==1.9.1
+docopt==0.6.2
+docutils==0.15.2
+ecdsa==0.16.0
 exponent-server-sdk==0.3.1
+fpdf==1.7.2
 frozendict==1.2
-# You cannot update graphql-core without updating ariadne first
-#   https://github.com/mirumee/ariadne/blob/0.12.0/requirements.txt#L7
 graphql-core==3.0.3
 gunicorn==20.0.4
-httpx==0.13.3
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2020.10.6
+httpcore==0.9.1
 httplib2==0.18.1
+httptools==0.1.1
+httpx==0.13.3
+hyperframe==5.2.0
 hyperlink==19.0.0
 idna==2.9
-jinja2==2.11.2
+incremental==17.5.0
+jmespath==0.10.0
+jwcrypto==0.8
+kiwisolver==1.2.0
+lxml==4.5.2
 mandrill-really-maintained==1.2.4
 matplotlib==3.2.1
 mixpanel==4.5.0
+more-itertools==8.4.0
+multidict==4.7.6
 mysqlclient==1.4.6
 newrelic==5.14.0.142
+numpy==1.19.2
 oauth2client==4.1.3
-lxml==4.5.2
-PyExcelerate==0.9.0
-pillow==7.2.0
+oauthlib==3.1.0
+pyOpenSSL==19.1.0
+pyasn1-modules==0.2.8
+pyasn1==0.4.8
+pycparser==2.20
 pykwalify==1.7.0
-pypdf4==1.27.0
-fpdf==1.7.2
+pyparsing==2.4.7
+python-dateutil==2.8.1
 python-jose==3.1.0
 python-magic==0.4.18
+python3-openid==3.2.0
 pytz==2020.1
-# You cannot update redis without updating redis-py-cluster first
-#   https://github.com/Grokzen/redis-py-cluster/blob/2.0.0/setup.py#L35
-redis==3.0.1
 redis-py-cluster==2.0.0
+redis==3.0.1
+requests-oauthlib==1.3.0
+requests==2.24.0
 retrying==1.3.3
+rfc3986==1.4.0
+rsa==3.4.2
 s3transfer==0.3.3
+service-identity==18.1.0
 simplejson==3.17.0
-starlette==0.13.8
-# This one cannot be updated
+six==1.15.0
+sniffio==1.1.0
 social-auth-app-django==3.1.0
+social-auth-core==3.3.3
+sqlparse==0.4.1
+starlette==0.13.8
 tracers==20.7.1645
+txaio==20.4.1
+typing-extensions==3.7.4.3
+urllib3==1.25.10
 uvicorn==0.11.5
+uvloop==0.14.0
 watchtower==0.7.3
+websockets==8.1
+wrapt==1.12.1
+yarl==1.6.0
 zenpy==2.0.20
+zope.interface==5.1.2
