--- a/integrates/lambda/send_mail_notification/requirements.txt
+++ b/integrates/lambda/send_mail_notification/requirements.txt
@@ -1,3 +1,7 @@
-mandrill-really-maintained==1.2.4
 certifi==2020.4.5.2
+chardet==3.0.4
+docopt==0.6.2
 idna==2.9
+mandrill-really-maintained==1.2.4
+requests==2.24.0
+urllib3==1.25.10
