--- a/integrates/deploy/production/deployment2.yaml
+++ b/integrates/deploy/production/deployment2.yaml
@@ -23,11 +23,11 @@ spec:
         imagePullPolicy: Always
         resources:
           requests:
-            cpu: 250m
-            memory: 512Mi
+            cpu: 1500m
+            memory: 2Gi
           limits:
-            cpu: 250m
-            memory: 512Mi
+            cpu: 2000m
+            memory: 2Gi
         env:
           - name: DEPLOYMENT_DATE
             value: "__DATE__"
