airs\refac(front): #3396.3 bugsnag report for airs
- Added bugnsg plugin for webpack and its configuration to report builds


Former-commit-id: 8cf8d3e3a9695b264828dc4ab88832b88da8b7ca

--- a/airs/theme/2020/package.json
+++ b/airs/theme/2020/package.json
@@ -13,17 +13,19 @@
   },
   "dependencies": {
     "sass": "1.26.3",
-    "@bugsnag/core": "7.3.5",
-    "@bugsnag/js": "7.4.0",
+    "@bugsnag/core": "7.2.1",
+    "@bugsnag/js": "7.2.1",
     "@types/grecaptcha": "3.0.1",
     "@types/intl-tel-input": "14.0.1",
     "@types/jquery": "3.3.30",
+    "@types/lodash": "4.14.159",
     "@types/terser-webpack-plugin": "2.2.0",
     "@types/webpack": "4.41.3",
     "@types/webpack-bugsnag-plugins": "1.4.0",
     "iframe-resizer": "4.2.11",
     "intl-tel-input": "14.0.10",
     "jquery": "3.5.1",
+    "lodash": "4.17.20",
     "terser-webpack-plugin": "2.3.2",
     "tslint": "5.18.0",
     "ts-loader": "6.2.1",
