integrates\feat(build): #3504.2 new app build
- Add new app dockerfile, job and provisioner


Former-commit-id: f9b2b1567c8c76e02e0b0b57bc6196c6355f022a

--- a/integrates/.gitlab-ci.yml
+++ b/integrates/.gitlab-ci.yml
@@ -314,6 +314,11 @@ integrates_deploy_permissions_matrix:
       - integrates/deploy/permissions-matrix/user_level.html
     when: on_success
 
+integrates_build_container_app_new:
+  <<: *with_nix
+  <<: *in_everywhere_except_periodic_jobs_and_mrs_integrates
+  stage: build
+
 integrates_build_container_app:
   <<: *with_nix
   <<: *in_everywhere_except_periodic_jobs_and_mrs_integrates
