integrates\refac(front): #3531.3 add codeowner
Former-commit-id: 6dafa4e1fd3b212bb67f3ef258e7123290f52e87

--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -2,7 +2,7 @@
 * @dsalazaratfluid @jrestrepoatfluid @kamadoatfluid @ralvarezatfluid
 
 # Front approvers
-/integrates/front/ @dacevedoatfluid @jrestrepoatfluid @kamadoatfluid
+/integrates/front/ @dacevedoatfluid @jrestrepoatfluid @kamadoatfluid @dsalazaratfluid
 /integrates/mobile/ @dacevedoatfluid @jrestrepoatfluid @kamadoatfluid
 
 # Integrates back authz approvers
