integrates\refac(build): #3531.2 disale passed pipe
Former-commit-id: bbad990c3257f98673b2a9f36450abe115c76e62

--- a/reviews.toml
+++ b/reviews.toml
@@ -6,7 +6,7 @@ platform = 'gitlab'
   [tests.all_pipelines_successful]
     fail = true
     close_mr = true
-    passed_first_pipeline_before_mr = true
+    passed_first_pipeline_before_mr = false
     job_name = 'reviews'
 
   [tests.mr_message_syntax]
