integrates\feat(back): #3399.37 new login process for app2
- This new pipeline/process is not yet available for app1,
it will be in next MRs. This is just the schema from which
keep building app2 login.
- Only for google authz, for now
- This new env var is a mock one that Starlette requires to
implement this process


Former-commit-id: ffa5157d6446830f00b5f6bd6d149c93fe82b69e

--- a/integrates/deploy/containers/app/requirements.txt
+++ b/integrates/deploy/containers/app/requirements.txt
@@ -1,3 +1,4 @@
+Authlib==0.15.1
 Automat==20.2.0
 Django==3.0.7
 Jinja2==2.11.2
@@ -71,6 +72,7 @@ hyperlink==19.0.0
 idna==2.9
 incremental==17.5.0
 jmespath==0.10.0
+itsdangerous==1.1.0
 jwcrypto==0.8
 kiwisolver==1.2.0
 lxml==4.5.2
