skims\feat(back): #3530.4 add unrestricted cidrs
- add tests


Former-commit-id: 54ab24bd18330e6dbdd0d12b017b04b96e08b525

--- a/skims/test/data/lib_path/f047_aws/cnf_unrestricted_cidrs.yaml
+++ b/skims/test/data/lib_path/f047_aws/cnf_unrestricted_cidrs.yaml
@@ -3,10 +3,10 @@ Resources:
     Properties:
       GroupDescription: groupDescription1
       SecurityGroupIngress:
-        - CidrIp: 34.229.161.227/16
-          FromPort: 1
+        - CidrIp: 0.0.0.0/0
+          FromPort: 443
           IpProtocol: "-1"
-          ToPort: 65535
+          ToPort: 443
     Type: AWS::EC2::SecurityGroup
   securityGroup2:
     Properties:
@@ -16,28 +16,28 @@ Resources:
     Properties:
       GroupDescription: groupDescription1
       SecurityGroupIngress:
-        - CidrIp: 34.229.161.227/16
+        - CidrIp: 0.0.0.0/0
           FromPort: 22
           IpProtocol: "-1"
           ToPort: 22
       SecurityGroupEgress:
-        - CidrIp: 34.229.161.227/16
+        - CidrIp: 0.0.0.0/0
           FromPort: 8080
           IpProtocol: "-1"
           ToPort: 8080
     Type: AWS::EC2::SecurityGroup
   securityGroupEgress1:
     Properties:
-      CidrIp: 34.229.161.227/16
-      FromPort: 22
+      CidrIpv6: ::/0
+      FromPort: 1434
       GroupId:
         Ref: securityGroup2
       IpProtocol: "-1"
-      ToPort: 8080
+      ToPort: 1434
     Type: AWS::EC2::SecurityGroupEgress
   securityGroupEgress2:
     Properties:
-      CidrIp: 34.229.161.227/16
+      CidrIpv6: ::/0
       FromPort: 8022
       GroupId:
         Ref: securityGroup2
@@ -46,14 +46,14 @@ Resources:
     Type: AWS::EC2::SecurityGroupEgress
   securityGroupIngress1:
     Properties:
-      CidrIp: 110.229.161.227/16
+      CidrIpv6: ::/0
       FromPort: 22
       GroupId:
         Ref: securityGroup2
       GroupName: securityGroup2
       IpProtocol:
         Ref: IpInsecureProtocol
-      ToPort: 8080
+      ToPort: 22
     Type: AWS::EC2::SecurityGroupIngress
   securityGroupIngress2:
     Properties:
@@ -68,7 +68,7 @@ Resources:
     Properties:
       CidrIp:
         Ref: IpSecurityGroup
-      FromPort: 22
+      FromPort: 8080
       GroupName: securityGroup2
       IpProtocol: "-1"
       ToPort: 8080
