--- a/observes/etl/dif_gitlab_etl/pyproject.toml
+++ b/observes/etl/dif_gitlab_etl/pyproject.toml
@@ -5,10 +5,14 @@ description = ""
 authors = ["Product Team <development@fluidattacks.com>"]
 
 [tool.poetry.dependencies]
-python = "3.8"
-aiohttp = "3.6.3"
+python = "3.8.2"
+aiohttp = "3.6.2"
+streamer-gitlab = {path = "../../singer/streamer_gitlab"}
 
 [tool.poetry.dev-dependencies]
+pytest = "6.1.1"
+pytest-timeout = "1.4.2"
+pytest-asyncio = "0.14.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
