integrates\feat(build): #3504.6 nixify probes
- Add probe helpers
- Add local and ephemeral jobs
- Add provisioners
- Other minor changes


Former-commit-id: 7c474817ca05f9ce0d693879d38d7f408fe582d7

--- a/integrates/deploy/containers/app-new/Dockerfile
+++ b/integrates/deploy/containers/app-new/Dockerfile
@@ -11,4 +11,4 @@ COPY . .
 RUN     nix-shell --run ':' "${PROVISIONER}" \
     &&  nix-store --optimise
 
-ENV FI_VERSION ${VERSION}
+ENV FI_VERSION="${VERSION}"
