--- a/observes/singer/streamer_gitlab/pyproject.toml
+++ b/observes/singer/streamer_gitlab/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.7"
 aiohttp = "3.6.2"
 aioextensions = "20.8.2087641"
 asgiref = "3.2.10"
+pytest = "6.1.1"
+pytest-asyncio = "0.14.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
