integrates\feat(build): #3504.8 nixify ephemerals
- Remove ARG from dockerfile
- Use new nixified container
- Use new nixified probes
- Add new variables required for nixified version to run
- Set Colombia time for nixified container
- Update local dynamo populate script


Former-commit-id: e371d6e4163bebf86b1aae3e1c2af731b64c65fe

--- a/integrates/deploy/containers/app-new/Dockerfile
+++ b/integrates/deploy/containers/app-new/Dockerfile
@@ -1,14 +1,22 @@
 FROM nixos/nix:2.3
 
+# Base dependencies
 RUN apk add --no-cache \
       bash=5.0.0-r0 \
       git=2.22.4-r0
 
-WORKDIR /usr/src/app
+# Timezone
+RUN     apk add tzdata=2020c-r0 \
+    &&  cp /usr/share/zoneinfo/America/Bogota /etc/localtime \
+    &&  echo "America/Bogota" > /etc/timezone \
+    &&  apk del tzdata
 
-ARG PROVISIONER='build/provisioners/integrates_serve_back_dev.nix'
+WORKDIR /product
+
+# Cache integrates dependencies
 COPY . .
-RUN     nix-shell --run ':' "${PROVISIONER}" \
+RUN     nix-shell --run ':' 'build/provisioners/integrates_serve_back_dev.nix' \
     &&  nix-store --optimise
 
+# Set version
 ENV FI_VERSION="${VERSION}"
