--- a/integrates/deploy/ephemeral/variables.yaml
+++ b/integrates/deploy/ephemeral/variables.yaml
@@ -8,3 +8,8 @@ data:
   AWS_ACCESS_KEY_ID: __B64_AWS_ACCESS_KEY_ID__
   AWS_SECRET_ACCESS_KEY: __B64_AWS_SECRET_ACCESS_KEY__
   JWT_TOKEN: __B64_JWT_TOKEN__
+  INTEGRATES_DEV_AWS_ACCESS_KEY_ID: __B64_AWS_ACCESS_KEY_ID__
+  INTEGRATES_DEV_AWS_SECRET_ACCESS_KEY: __B64_AWS_SECRET_ACCESS_KEY__
+  CI_COMMIT_REF_NAME: __B64_CI_COMMIT_REF_NAME__
+  CI_REGISTRY_USER: ''
+  CI_REGISTRY_PASSWORD: ''
