sorts\perf(back): #3005.22 save git log to file
- Instead of performing a 'git log' operation per file, extract
  all the history of the repository in one command and save it to
  a file. To get the metrics, just read and parse the file.
- For small repos, this actually slows down the processing a bit,
  but not anything too noticeable. For large repos, this helps a lot,
  one repo that took 10 min to extract the training data now takes
  1.5 min; this same repo took 4+ hours to do the prioritization,
  now it takes 10 min.


Former-commit-id: 2dec2a55983c8b4b9f74617537c460f7377ff88f

--- a/sorts/pyproject.toml
+++ b/sorts/pyproject.toml
@@ -45,6 +45,7 @@ PyDriller = "1.15.2"
 python = "^3.8"
 pytz = "2020.1"
 scikit-learn = "0.23.2"
+tqdm = "4.50.2"
 
 [tool.poetry.dev-dependencies]
 mypy = "0.782"
