--- a/observes/etl/dif_gitlab_etl/pyproject.toml
+++ b/observes/etl/dif_gitlab_etl/pyproject.toml
@@ -7,7 +7,9 @@ authors = ["Product Team <development@fluidattacks.com>"]
 [tool.poetry.dependencies]
 python = "3.8.2"
 aiohttp = "3.6.2"
+psycopg2 = "2.8.4"
 streamer-gitlab = {path = "../../singer/streamer_gitlab"}
+tap-json = {path = "../../singer/tap_json"}
 
 [tool.poetry.dev-dependencies]
 pytest = "6.1.1"
