integrates\perf(build): #3504.13 shallow clone
- Make integrates nixified jobs to only clone last
5 commits from product repo
- Make deploy ephemerals depend on new container build


Former-commit-id: ea2da58f47893311abab45cff958c8ea2a14c528

--- a/integrates/.gitlab-ci.yml
+++ b/integrates/.gitlab-ci.yml
@@ -5,6 +5,8 @@
   script:
     - ./build.sh "${CI_JOB_NAME% *}"
   interruptible: true
+  variables:
+    GIT_DEPTH: 5
 
 .integrates_commit_pattern: &integrates_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|integrates)/'
 
@@ -246,7 +248,7 @@ integrates_deploy_back_ephemeral:
   <<: *with_nix
   <<: *in_dev_branch_integrates
   stage: deploy-app
-  needs: [integrates_build_container_app, integrates_build_container_app2]
+  needs: [integrates_build_container_app_new]
   retry: 1
   environment:
     name: "ephemeral/$CI_COMMIT_REF_SLUG"
@@ -559,5 +561,4 @@ common_send_new_release_email:
   <<: *with_nix
   <<: *in_master_branch_integrates
   stage: post-deploy
-  needs:
-    - integrates_deploy_back_production
+  needs: [integrates_deploy_back_production]
