integrates\refac(build): #3354 disable devicefarm job
Former-commit-id: 19654fbf7c7a6cfb7dd22f1096506e2395e9a1ac

--- a/integrates/.gitlab-ci.yml
+++ b/integrates/.gitlab-ci.yml
@@ -389,7 +389,7 @@ integrates_functional_tests_prod:
       - integrates/test/functional/screenshots/
     when: always
 
-integrates_functional_tests_mobile:
+.integrates_functional_tests_mobile:
   <<: *with_nix
   <<: *in_dev_branch_integrates
   needs:
