integrates\perf(build): #3504.15 optimize provisioner
- Optimize provisioner for container build by removing some
unnecessary dependencies
- Use autoscaling large for container construction
- Parametrize provisioner


Former-commit-id: 95f66e0c34c3413e1767e5a38d07da76cf08d5e2

--- a/integrates/deploy/containers/app-new/Dockerfile
+++ b/integrates/deploy/containers/app-new/Dockerfile
@@ -14,6 +14,7 @@ RUN     apk add --no-cache tzdata=2020c-r0 \
 WORKDIR /product
 
 # Cache integrates dependencies
+ARG PROVISIONER
 COPY . .
-RUN     nix-shell --run ':' 'build/provisioners/integrates_serve_local.nix' \
+RUN     nix-shell --run ':' "${PROVISIONER}" \
     &&  nix-store --optimise
