--- a/integrates/.gitlab-ci.yml
+++ b/integrates/.gitlab-ci.yml
@@ -319,6 +319,7 @@ integrates_deploy_permissions_matrix:
 integrates_build_container_app_new:
   <<: *with_nix
   <<: *in_everywhere_except_periodic_jobs_and_mrs_integrates
+  tags: [autoscaling-large]
   stage: build
 
 integrates_build_container_app:
