sorts\feat(back): #3005.24 print table top results
- Print the top 20 results of the file prioritization in a pretty
  table on the stdout.


Former-commit-id: d2ec750bec1c468d824018536b59df7bd3a1aa40

--- a/sorts/pyproject.toml
+++ b/sorts/pyproject.toml
@@ -41,6 +41,7 @@ more_itertools = "8.5.0"
 mypy_extensions = "0.4.3"
 numpy = "1.19.2"
 pandas = "1.1.2"
+prettytable = "1.0.1"
 PyDriller = "1.15.2"
 python = "^3.8"
 pytz = "2020.1"
