--- a/observes/etl/dif_gitlab_etl/pyproject.toml
+++ b/observes/etl/dif_gitlab_etl/pyproject.toml
@@ -10,6 +10,7 @@ aiohttp = "3.6.2"
 psycopg2 = "2.8.4"
 streamer-gitlab = {path = "../../singer/streamer_gitlab"}
 tap-json = {path = "../../singer/tap_json"}
+nest-asyncio = "1.4.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "6.1.1"
@@ -19,3 +20,6 @@ pytest-asyncio = "0.14.0"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.poetry.scripts]
+dif-gitlab-etl = 'dif_gitlab_etl.cli:main'
